<resources>
    <string name="app_name">meetDeb</string>

    <string name="drawer_events">Események</string>
    <string name="drawer_profile">Profil</string>
    <string name="drawer_event_create">Esemény létrehozása</string>

    <string name="done">Kész!</string>

    <string name="field_required">A mezőt kötelező kitölteni!</string>
    <string name="invalid_email">Az email cím nem érvényes!</string>
    <string name="min_password_length">A jelszó min. 8 karakter lehet!</string>
    <string name="min_name_length">A név min. 4 karakter lehet!</string>
    <string name="max_name_length">A név max. 80 karakter lehet!</string>
    <string name="future_date_required">Nem adhatsz meg múltbeli dátumot!</string>
    <string name="cannot_update_image">A képet nem lehet frissíteni!</string>
    <string name="max_event_name_length">A név max. 40 karakter lehet!</string>

    <string name="event_creator">Létrehozó:</string>
    <string name="event_venue">Helyszín:</string>
    <string name="event_date">Időpont:</string>
    <string name="event_description">Leírás:</string>
    <string name="event_desc_button">Esemény leírása</string>
    <string name="event_participants_button">Megnézem!</string>
    <string name="event_image_desc">Event image</string>

    <string name="event_add_button">Új esemény</string>
    <string name="event_name_hint">Az esemény neve</string>
    <string name="event_desc_hint">Miről szól az esemény?</string>
    <string name="event_venue_hint">Hol lesz az esemény?</string>
    <string name="event_date_set">Dátum</string>
    <string name="event_time_set">Időpont</string>
    <string name="event_image_select">Kép kiválasztása…</string>
    <string name="event_create_button">Létrehozás</string>
    <string name="event_create_waiting">Létrehozás…</string>

    <string name="participant_image_desc">Profile image</string>

    <string name="event_date_add">Más időpont</string>

    <string name="event_accepted">Elfogadva!</string>
    <string name="event_not_accepted">Ott leszek</string>
    <string name="event_accept_waiting">Várj</string>
    <string name="event_reported">Esemény jelentve!</string>
    <string name="event_report_removed">Esemény jelentés törölve!</string>

    <string name="date_add_button">Új időpont</string>
    <string name="date_add_button_desc">Plus sign on add date button</string>
    <string name="date_add_button_arrow_desc">Down arrow on add date button</string>
    <string name="date_create_button">Hozzáadás</string>
    <string name="date_create_waiting">Hozzáadás…</string>

    <string name="register_title">Regisztráció</string>
    <string name="register_email_hint">Email cím</string>
    <string name="register_password_hint">Jelszó</string>
    <string name="register_name_hint">Név</string>
    <string name="register_already_registered">Már regisztráltál?\nKattints a belépéshez</string>
    <string name="register_create_waiting">Létrehozás…</string>

    <string name="login_title">Bejelentkezés</string>
    <string name="login_not_registered">Még nem regisztráltál?\nKattints a regisztráláshoz</string>
    <string name="login_waiting">Belépés…</string>

    <string name="loader_screen_logo">Loader screen logo</string>

    <string name="event_more_button_desc">Event more button</string>
    <string name="event_more_delete">Törlés</string>
    <string name="event_more_report">Jelentés</string>
    <string name="event_more_remove_report">Jelentés törlése</string>
    <string name="event_more_update">Frissítés</string>
    <string name="event_more_update_waiting">Frissítés…</string>

    <string name="event_votes">Szavazatok: %1$d</string>
    <string name="event_participants">"Ott lesz %1$d ember"</string>

    <string name="profile_image_desc">Profile image</string>
    <string name="profile_admin">Adminisztrátor</string>
    <string name="profile_user">Felhasználó</string>
    <string name="profile_accepted">résztvett</string>
    <string name="profile_created">létrehozott</string>
    <string name="profile_identifier">Azonosító</string>
    <string name="profile_update">Adatok módosítása</string>
    <string name="profile_delete">Fiók törlése</string>
    <string name="profile_logout">Kijelentkezés</string>

    <string name="profile_delete_title">Figyelem!</string>
    <string name="profile_delete_info">Amennyiben törlöd a fiókod, minden adat véglegesen elveszlik. Ez magába foglalja az általad létrehozott múltbeli és jövőbeli eseményeket, más időpont ajánlásokat és az ezekre történő szavazatokat.</string>
    <string name="profile_delete_yes">Igen, törlöm</string>
    <string name="profile_delete_no">Vissza</string>

    <string name="profile_update_title">Válassz!</string>
    <string name="profile_update_info">Mit szeretnél frissíteni?</string>
    <string name="profile_update_email">Email cím</string>
    <string name="profile_update_password">Jelszó</string>

    <string name="profile_email_title">Email frissítése</string>
    <string name="profile_email_email">Új email cím</string>
    <string name="profile_email_password">Jelenlegi jelszó</string>
    <string name="profile_email_update">Frissítés</string>
    <string name="profile_email_update_waiting">Frissítés…</string>

    <string name="profile_password_title">Jelszó frissítése</string>
    <string name="profile_password_password_new">Új jelszó</string>

    <string name="invalid_credentials">Hibás felhasználónév vagy jelszó!</string>
    <string name="invalid_current_password">Hibás jelenlegi jelszó!</string>

    <string name="user_not_found">A felhasználó nem található!</string>
    <string name="no_users_found">Nem található felhasználó!</string>
    <string name="confirmation_token_not_found">A megerősítő token nem található!</string>
    <string name="email_already_in_use">Az email cím már használatban van!</string>
    <string name="user_already_verified">A felhasználó már meg lett erősítve!</string>
    <string name="event_not_found">Az esemény nem található!</string>
    <string name="no_events_found">Nem található esemény!</string>
    <string name="participant_not_found">A jelentkezés nem található!</string>
    <string name="date_not_found">A dátum ajánlás nem található!</string>
    <string name="no_dates_found">Nem található dátum ajánlás!</string>
    <string name="date_already_created">A dátum ajánlás már létre lett hozva!</string>
    <string name="file_not_found">A fájl nem található!</string>
    <string name="filename_invalid">A fájlnév nem megfelelő!</string>
    <string name="could_not_convert_image">A kép nem konvertálható!</string>
    <string name="file_size_limit_exceeded">Maximális feltöltési méret meghaladva!</string>
    <string name="upload_failed">Feltöltés sikertelen!</string>
    <string name="could_not_create_directory">Nem hozható létre a könyvtár!</string>
    <string name="bad_request_format">Rossz kérés formázás!</string>
    <string name="access_denied">Hozzáférés megtagadva!</string>
    <string name="user_disabled_or_not_valid">A felhasználó nem létezik, vagy fel lett függesztve!</string>
    <string name="timeout_error">Időtúllépés!</string>
    <string name="connect_error">Csatlakozási hiba!</string>
    <string name="unknown_error">Valami hiba történt!</string>

    <!-- Gliger -->
    <string name="over_limit_msg">Csak egy képet választhatsz!</string>
    <string name="capture_new_image">Új kép készítése</string>
    <string name="change_album_text">Más album választása</string>
    <string name="permission_storage_never_ask">A kép kiválasztást engedélyezd a beállításokban!</string>
    <string name="all_images">Összes kép</string>
</resources>
