<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_update_info"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurfaceSecondary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/emailButton"
        style="@style/WidgetButtonBottomSheetBase"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_update_email" />

    <Button
        android:id="@+id/passwordButton"
        style="@style/WidgetButtonBottomSheetBase"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_update_password" />
</LinearLayout>