<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/dlp_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="13dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dlp_headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dlp_plusSign"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/date_add_button_desc"
            android:src="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/date_add_button"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/dlp_plusSign"
            app:layout_constraintStart_toEndOf="@id/dlp_plusSign"
            app:layout_constraintTop_toTopOf="@id/dlp_plusSign" />

        <ImageView
            android:id="@+id/dlp_downArrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/date_add_button_arrow_desc"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/dlp_plusSign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dlp_plusSign" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/dlp_subLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dlp_headerLayout">

        <TextView
            android:id="@+id/dlp_dateTitle"
            style="@style/WidgetLabelSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/dlp_dateButton"
                style="@style/WidgetButtonPicker"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/event_date_set" />

            <Button
                android:id="@+id/dlp_timeButton"
                style="@style/WidgetButtonPicker"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/event_time_set" />
        </LinearLayout>

        <Button
            android:id="@+id/dlp_createButton"
            style="@style/WidgetButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/date_create_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
