<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/eventDateTime"
        style="@style/styleCreateEventText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/dateButton"
            style="@style/styleSetterButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/event_date_set" />

        <Button
            android:id="@+id/timeButton"
            style="@style/styleSetterButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/event_time_set" />
    </LinearLayout>

    <Button
        android:id="@+id/createButton"
        style="@style/styleFabLabel"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/event_create_button" />
</LinearLayout>