<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.gkiss01.meetdeb.screens.CreateEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorEventsBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/eventName"
                style="@style/styleCreateEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewmodel.eventName}" />

            <EditText
                android:id="@+id/eventDescription"
                style="@style/styleCreateEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/event_labels_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minLines="1"
                android:scrollbars="vertical"
                android:text="@={viewmodel.eventDescription}" />

            <TextView
                android:id="@+id/eventDateTime"
                style="@style/styleCreateEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <Button
                    android:id="@+id/dateButton"
                    style="@style/styleSetterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_date_set" />

                <Button
                    android:id="@+id/timeButton"
                    style="@style/styleSetterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_time_set" />
            </LinearLayout>

            <EditText
                android:id="@+id/eventVenue"
                style="@style/styleCreateEventText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/event_venue_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewmodel.eventVenue}" />

            <Button
                android:id="@+id/imageButton"
                style="@style/styleSetterButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/event_image_select" />

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/event_image"
                android:src="@drawable/placeholder" />

            <Button
                android:id="@+id/createButton"
                style="@style/styleFabLabel"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/event_create_button" />
        </LinearLayout>
    </ScrollView>
</layout>