<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.gkiss01.meetdeb.data.fastadapter.DatePickerItemKt" />

        <variable
            name="event"
            type="com.gkiss01.meetdeb.data.fastadapter.Event" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cef_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/WidgetInputTextFieldLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name_hint"
                    android:inputType="text"
                    android:text="@={event.name}"
                    android:textColor="?attr/colorOnPrimaryTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cef_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/WidgetInputTextFieldLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_desc_hint"
                    android:inputType="textPersonName|textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:text="@={event.description}"
                    android:textColor="?attr/colorOnPrimaryTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cef_dateTitle"
                style="@style/WidgetLabelSelectedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@{DatePickerItemKt.format(event.date)}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <Button
                    android:id="@+id/cef_dateButton"
                    style="@style/WidgetButtonPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_date_set" />

                <Button
                    android:id="@+id/cef_timeButton"
                    style="@style/WidgetButtonPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_time_set" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cef_venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/WidgetInputTextFieldLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_venue_hint"
                    android:inputType="text"
                    android:text="@={event.venue}"
                    android:textColor="?attr/colorOnPrimaryTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cef_imageButton"
                style="@style/WidgetButtonPicker"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/event_image_select" />

            <ImageView
                android:id="@+id/cef_imagePreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/event_image_desc"
                android:src="@drawable/placeholder" />

            <Button
                android:id="@+id/cef_createButton"
                style="@style/WidgetButtonAction"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>
</layout>